# ideation-agent-competitor-analyst

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: run.yml
src/ideation_agent_competitor_analyst/: __init__.py  agent.py  main.py
src/ideation_agent_competitor_analyst/prompts/: system.md
tests/: test_agent.py
